...
        LogseqLanguageChoice(id: "uk", title: "Українська"),
        LogseqLanguageChoice(id: "ko", title: "한국어"),
        LogseqLanguageChoice(id: "sk", title: "Slovenčina"),
        LogseqLanguageChoice(id: "fa", title: "فارسی"),
        LogseqLanguageChoice(id: "id", title: "Bahasa Indonesia"),
        LogseqLanguageChoice(id: "cs", title: "Čeština"),
        LogseqLanguageChoice(id: "ar", title: "العربية"),
    ]

    static let communityLinks = [
        LogseqCommunityLink(
            title: "Report bug",
            url: URL(string: "https://github.com/logseq/db-test/issues")!
...
