appId: com.logseq.logseq
---
- runFlow: __LOGSEQ_E2E_SETUP_FLOW__
- extendedWaitUntil:
    visible:
      text: "More"
    timeout: 60000
- tapOn: "More"
- tapOn: "Settings"
- assertVisible:
    id: "screen.settings"
- assertVisible: "Theme"
- assertVisible: "Language"
- tapOn:
    id: "picker.settings.language"
- scrollUntilVisible:
    element:
      text: "العربية"
    direction: DOWN
- tapOn: "العربية"
- tapOn:
    id: "picker.settings.language"
- scrollUntilVisible:
    element:
      text: "System"
    direction: UP
- tapOn: "System"
- assertVisible: "Editor"
- assertVisible: "Sync server"
- scrollUntilVisible:
    element:
      text: "Check log"
    direction: DOWN
- assertVisible: "About"
- assertVisible: "Version.*"
- assertVisible: "Revision.*"
- assertVisible: "Check log"
- scrollUntilVisible:
    element:
      text: "Community"
    direction: DOWN
- assertVisible: "Report bug"
- scrollUntilVisible:
    element:
      text: "Discord community"
    direction: DOWN
- assertVisible: "Discord community"
- scrollUntilVisible:
    element:
      text: "Forum"
    direction: DOWN
- assertVisible: "Forum"
- scrollUntilVisible:
    element:
      text: "GitHub"
    direction: DOWN
- assertVisible: "GitHub"
- tapOn: "Cancel"
