appId: com.logseq.app
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "button.sidebar"
    timeout: 30000
- tapOn:
    id: "button.sidebar"
- tapOn:
    id: "link.sidebar.flashcards"
- extendedWaitUntil:
    visible:
      id: "flashcard.question"
    timeout: 10000
- assertNotVisible:
    id: "button.composer.expand"
- assertNotVisible:
    id: "button.search"
- assertVisible: 'The capital of France is \[…\]'
- tapOn:
    id: "button.flashcard.show-cloze"
- assertVisible: "The capital of France is Paris"
- tapOn:
    id: "button.flashcard.show-answer"
- assertVisible: "Paris is the answer"
- tapOn:
    id: "button.flashcard.rating.good"
- extendedWaitUntil:
    visible:
      id: "flashcards.empty"
    timeout: 10000
- assertVisible: "No cards due"
